@startuml 图4-6 成果管理模块核心类图
skinparam backgroundColor #FFFFFF
skinparam defaultFontColor #000000

class EduAchievementController {
  - eduAchievementService: IEduAchievementService
  --
  + list(achievement): TableDataInfo
  + export(response, achievement): void
  + getInfo(id): AjaxResult
  + add(achievement): AjaxResult
  + edit(achievement): AjaxResult
  + remove(ids): AjaxResult
  --
  + teacherList(achievement): TableDataInfo
  + teacherAdd(achievement): AjaxResult
  + teacherEdit(achievement): AjaxResult
  + teacherRemove(ids): AjaxResult
  + teacherAllList(achievement): AjaxResult
  + teacherResubmit(achievement): AjaxResult
  + teacherWithdraw(id): AjaxResult
}

class EduAchievement {
  - achievementId: Long
  - title: String
  - content: String
  - fileUrl: String
  - teacherId: Long
  - collegeId: Long
  - status: String
  - category: String
  - level: String
  - delFlag: String
  --
  + getTeacherName(): String
  + getCollegeName(): String
  + getScore(): Integer
}

class IEduAchievementService {
  + selectById(id): EduAchievement
  + selectList(achievement): List
  + insert(achievement): int
  + update(achievement): int
  + deleteByIds(ids): int
  --
  + countByStatus(): List<Map>
  + countByCategory(): List<Map>
  + countByCollege(): List<Map>
  + countTotal(): int
  + countTotalPending(): int
  + countTodayNew(): int
  + countWeekNew(): int
}

class EduAchievementServiceImpl {
  - mapper: EduAchievementMapper
  --
  + selectById(id): EduAchievement
  + selectList(achievement): List
  + insert(achievement): int
  + update(achievement): int
  + deleteByIds(ids): int
}

class EduAchievementMapper {
  + selectById(id): EduAchievement
  + selectList(achievement): List
  + insert(achievement): int
  + update(achievement): int
  + deleteByIds(ids): int
  + countByStatus(): List<Map>
  + countByCategory(): List<Map>
}

class EduAuditRecordController {
  - auditRecordService: IEduAuditRecordService
  - achievementService: IEduAchievementService
  --
  + list(): TableDataInfo
  + approve(id, opinion): AjaxResult
  + reject(id, opinion): AjaxResult
}

class EduAuditRecord {
  - recordId: Long
  - achievementId: Long
  - auditLevel: String
  - auditResult: String
  - auditOpinion: String
  - auditorId: Long
  - auditorName: String
  - createTime: Date
}

EduAchievementController --> IEduAchievementService : uses
IEduAchievementService <|.. EduAchievementServiceImpl : implements
EduAchievementServiceImpl --> EduAchievementMapper : uses
EduAchievementMapper ..> EduAchievement : maps
EduAuditRecordController --> IEduAchievementService : updates status
EduAuditRecordController --> EduAuditRecord : creates
EduAchievement "1" -- "0..*" EduAuditRecord : has

@enduml
